[gd_scene load_steps=11 format=3 uid="uid://cbic0bhlr6015"]

[ext_resource type="Script" path="res://Scripts/UnidadPress.gd" id="1_hq7mc"]
[ext_resource type="FontFile" uid="uid://b1talsa0wfwtk" path="res://fonts/j foundry - colby black.otf" id="2_0d723"]
[ext_resource type="Texture2D" uid="uid://b04xctl640eue" path="res://Sprites/GUI/ppticon.png" id="3_lp132"]
[ext_resource type="FontFile" uid="uid://b0egmodgvdla" path="res://fonts/SassoonSansStd-Medium.otf" id="4_o2oyo"]
[ext_resource type="Texture2D" uid="uid://diufjd2y8b2mu" path="res://Sprites/GUI/CircleInterno.png" id="5_l2k8f"]
[ext_resource type="Texture2D" uid="uid://ckr0nnpww4qm8" path="res://Sprites/GUI/Circle.png" id="6_mouk6"]
[ext_resource type="FontFile" uid="uid://cfxoy7q6ip6rl" path="res://fonts/SassoonSansStd-Bold.otf" id="7_gosku"]

[sub_resource type="LabelSettings" id="LabelSettings_phv3j"]
font = ExtResource("2_0d723")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_0iemi"]
font = ExtResource("4_o2oyo")
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xrc2x"]
font = ExtResource("7_gosku")
font_size = 18

[node name="UnidadPresentaciones" type="Control"]
custom_minimum_size = Vector2(424, 64)
layout_mode = 3
anchor_right = 0.388
anchor_bottom = 0.224
offset_right = 0.0239868
offset_bottom = -0.152008
script = ExtResource("1_hq7mc")

[node name="UnidadTitulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.5
offset_right = 213.0
offset_bottom = 41.5
grow_vertical = 2
text = "Unidad N"
label_settings = SubResource("LabelSettings_phv3j")
vertical_alignment = 1

[node name="PPt1" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -54.5
offset_right = -134.0
offset_bottom = 33.5
grow_horizontal = 0
grow_vertical = 2
action_mode = 0
texture_normal = ExtResource("3_lp132")

[node name="Label" type="Label" parent="PPt1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = 45.0
offset_right = 60.5
offset_bottom = 67.976
grow_horizontal = 2
grow_vertical = 2
text = "Presentación n"
label_settings = SubResource("LabelSettings_0iemi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cricle" type="TextureRect" parent="PPt1"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = -1.0
offset_right = -6.0
offset_bottom = 24.0
grow_horizontal = 0
texture = ExtResource("5_l2k8f")
expand_mode = 1
stretch_mode = 4

[node name="CircleInterior" type="TextureRect" parent="PPt1/Cricle"]
modulate = Color(0.345098, 0.345098, 0.345098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mouk6")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="PPt1/Cricle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -8.5
offset_right = 5.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(4.5, 8)
text = "1"
label_settings = SubResource("LabelSettings_xrc2x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PPt2" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -54.5
offset_right = -1.0
offset_bottom = 33.5
grow_horizontal = 0
grow_vertical = 2
action_mode = 0
texture_normal = ExtResource("3_lp132")

[node name="Label" type="Label" parent="PPt2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = 45.0
offset_right = 60.5
offset_bottom = 67.976
grow_horizontal = 2
grow_vertical = 2
text = "Presentación n"
label_settings = SubResource("LabelSettings_0iemi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cricle" type="TextureRect" parent="PPt2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = -1.0
offset_right = -6.0
offset_bottom = 24.0
grow_horizontal = 0
texture = ExtResource("5_l2k8f")
expand_mode = 1
stretch_mode = 4

[node name="CircleInterior" type="TextureRect" parent="PPt2/Cricle"]
modulate = Color(0.345098, 0.345098, 0.345098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mouk6")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="PPt2/Cricle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -8.5
offset_right = 5.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(4.5, 8)
text = "2"
label_settings = SubResource("LabelSettings_xrc2x")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PPt1" to="." method="_on_p_pt_1_pressed"]
[connection signal="pressed" from="PPt2" to="." method="_on_p_pt_2_pressed"]
